# pixel-mcp

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
docs/adr/: 0001-python-over-typescript.md  0002-escalation-gates-over-parallel-signals.md  0003-split-mcp-servers-verification-and-recording.md
